@@ -1,3 +1,11 @@
+2007-02-10  Michael Natterer  <mitch@gimp.org>
+
+	* modules/controller_linux_input.c: added some code stolen from
+	DirectFB and forgotten on my disk a long time ago which queries
+	the input device for available keys and axes (just for debugging
+	purposes for now). Also add one more button event and some
+	debugging output for incoming events.
+
 2007-02-09  Michael Natterer  <mitch@gimp.org>
 
 	* modules/controller_linux_input.c (linux_input_read_event): fix
